@@ -460,6 +460,9 @@ Release 0.5.0 -  Unreleased
     HIVE-1097. Change memory for groupby_bigdata
     (Paul Yang via namit)
 
+    HIVE-898. Hive ODBC build fails on OSX.
+    (Carl Steinbach and Ning Zhang via zshao)
+
 Release 0.4.0 -  Unreleased
 
   INCOMPATIBLE CHANGES
